Commit to be able to switch

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=your_password_here;Database=postgres"
+    "DefaultConnection": "Host=localhost;Port=5433;Username=postgres;Password=postgres;Database=postgres"
   }
 }
